examples/test/testpolicy13024.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13024
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key13: value22
      key7: value15
      key38: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value6
          key14: value6
      podSelector:
        matchLabels:
          key42: value2
          key39: value17
